fix alignment

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -116,9 +116,12 @@ footer {
 
 .intro,
 .quotes__wrapper,
-.apply,
-.intro-message {
+{
   grid-template-rows: 0.66fr minmax(16em, 5fr) 1fr;
+}
+
+.intro-message {
+  grid-template-rows: auto auto;
 }
 
 .about,
@@ -138,10 +141,13 @@ footer {
 
 .intro__message__container,
 .intro-message__container,
-.quotes__quote__container,
-.apply__wrapper {
+.quotes__quote__container {
   grid-row: 2;
   grid-column: 2;
+}
+
+.apply__wrapper {
+  grid-column: 1/-1;
 }
 
 .intro-message__container {
@@ -470,8 +476,8 @@ body, body a {
 }
 
 @media only screen and (max-width: $breakpoint-s) {
-  .intro-message__container__header,
-  .intro__message__container__header {
+  .intro-message__heading,
+  .intro__message__heading {
     @include oTypographyDisplay($scale: 6);
   }
 }
@@ -677,8 +683,8 @@ span {
 .intro__message__text {
   max-width: 480px;
   margin: auto;
-  margin-bottom: 3em;
-  margin-top: 1em;
+  margin-bottom: 2em;
+  margin-top: 0.3em;
 }
 
 .intro__message__logo {
@@ -927,7 +933,6 @@ span {
 .apply__wrapper {
   background-color: $dark-slate;
   padding-bottom: 4em;
-  padding-top: 2em;
   margin-bottom: 2em;
 }
 
